test/files/errors/division_by_zero.scm
; Test: Division by zero - should return exit code 84
(div 10 0)
